# shizi-translator

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  app.manifest  package-lock.json  package.json  plugins.md
.agents/skills/my-commit/: SKILL.md
.claude/: settings.json
.claude/hooks/: pre-commit
.claude/memory/: MEMORY.md
.claude/skills/brainstorming/: SKILL.md
.claude/skills/my-commit/: SKILL.md
.claude/skills/writing-plans/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  nightly.yml  release.yml
docs/: agent-model-policy.md  agent-team.md
docs/agent/: 2026-07-08-translation-popup-language-and-visual-backend.md  2026-07-08-translation-popup-language-and-visual-frontend.md  architecture-notes.md  board.md  spike-2026-07-24-winui-reactor-tauri.md
docs/architecture/: screenshot-ocr-architecture.md  ui-decoupling-proposal.md
docs/roadmap/: progressive-development-plan.md
docs/superpowers/: handoff-templates.md
docs/superpowers/plans/: 2026-06-30-overlay-region-capture.md  2026-06-30-screen-capture-spike.md  2026-06-30-screenshot-ocr-end-to-end.md  2026-06-30-screenshot-ocr-milestone2.md  2026-06-30-windows-ocr-spike.md  2026-07-01-claude-provider-implementation.md  2026-07-01-claude-provider.md  2026-07-01-settings-translation-window-split.md  2026-07-01-token-usage-pass-through.md  2026-07-01-translation-execution-control.md  2026-07-01-translation-source-display.md  2026-07-02-ocr-error-display.md  2026-07-02-settings-visual-polish.md  2026-07-02-settings-vue-refactor.md  2026-07-03-service-protocol-batch-translation.md  2026-07-03-shortcut-binding-implementation.md  2026-07-03-translation-popup-rewrite.md  2026-07-04-service-module-polish.md  2026-07-04-shortcut-stability-icon-refresh.md  2026-07-05-current-ui-unimplemented-capabilities.md  2026-07-06-startup-translation-popup-live-services.md  2026-07-07-translation-popup-overflow-input-border.md  2026-07-08-advanced-logging.md  2026-07-08-translation-popup-language-and-visual.md  2026-07-09-microsoft-translate-and-provider-abstraction.md  2026-07-09-translation-popup-dropdown-and-lang-detection.md  2026-07-10-popup-startup-height-collapse.md  2026-07-10-popup-vue-migration-history-ui.md  2026-07-11-application-internationalization.md  2026-07-11-translation-history.md  2026-07-14-windows-app-icon.md  2026-07-15-multimodal-ocr-runtime.md  2026-07-15-ocr-window-logging-quality.md  2026-07-15-services-drag-detail-ocr.md  2026-07-16-github-check-update.md  2026-07-16-ocr-rerecognize-request-logging.md  2026-07-16-ocr-window-pdf-and-session-channel.md  2026-07-16-tray-native-menu.md  2026-07-24-winui-popup-backend.md  2026-07-24-winui-reactor-popup.md
docs/superpowers/specs/: 2026-06-30-overlay-region-capture-design.md  2026-06-30-screen-capture-spike-design.md  2026-06-30-screenshot-ocr-end-to-end-design.md  2026-06-30-windows-ocr-spike-design.md  2026-07-01-claude-provider-design.md  2026-07-01-settings-translation-window-split-design.md  2026-07-01-token-usage-pass-through-design.md  2026-07-01-translation-execution-control-design.md  2026-07-01-translation-source-display-design.md  2026-07-02-ocr-error-display-design.md  2026-07-02-settings-visual-polish-design.md  2026-07-02-settings-vue-refactor-design.md  2026-07-03-service-protocol-batch-translation-design.md  2026-07-03-shortcut-binding-design.md  2026-07-03-translation-popup-rewrite-design.md  2026-07-04-service-module-polish-design.md  2026-07-04-shortcut-stability-icon-refresh-design.md  2026-07-06-startup-translation-popup-live-services-design.md  2026-07-07-translation-popup-overflow-input-border-design.md  2026-07-08-advanced-logging-design.md  2026-07-10-popup-startup-height-collapse-design.md  (+22 more)
frontend/: index.html  main.js  ocr.html  overlay.html  package-lock.json  package.json  settings.css  settings.html  settings.js  style.css  translate.css  translate.html  translate.js  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/public/: logger.js  overlay.html  translate-card-sync.js  translate.css  translate.html  translate.js
frontend/src/: translate-card-sync.test.js
scripts/: bump-version.js  init.ps1  init.sh  sync-agents.sh
src/: main.rs  test.xml
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/app/: autostart.rs  icon.rs  logging.rs  mod.rs  popup_window.rs  shortcuts.rs  state.rs  tray.rs  window.rs
src-tauri/src/app/popup_backend/: host.rs  mod.rs  trait_api.rs  types.rs  view_model.rs  webview.rs
src-tauri/src/app/popup_backend/winui/: actions.rs  backend.rs  bootstrap.rs  mod.rs  ui.rs
src-tauri/src/app/popup_backend/winui/reactor/: dispatch.rs  host.rs  langs.rs  language_bar.rs  meta.rs  mod.rs  result_cards.rs  source_card.rs  state.rs  status_bar.rs  title_bar.rs  tokens.rs  view.rs
src-tauri/src/core/: logging.rs  mod.rs  ocr_translation.rs
src-tauri/src/core/capture/: mod.rs
src-tauri/src/core/config/: mod.rs  store.rs  types.rs
src-tauri/src/core/history/: mod.rs  store.rs  types.rs
src-tauri/src/core/i18n/: mod.rs
src-tauri/src/core/llm/: claude.rs  mock.rs  mod.rs  openai_compatible.rs  protocol.rs  provider.rs
src-tauri/src/core/mt/: microsoft.rs  mod.rs
src-tauri/src/core/ocr/: image_encode.rs  meta.rs  mod.rs  pdf_detect.rs  resolve.rs  vision_openai.rs
src-tauri/src/core/selection/: clipboard.rs  clipboard_image.rs  keyboard.rs  mod.rs
src-tauri/src/core/translation/: auto_lang.rs  batch.rs  mod.rs  protocol.rs  provider.rs  service.rs  types.rs
src-tauri/src/core/update/: github.rs  mod.rs  types.rs  version.rs
src-tauri/src/platform/: mod.rs  unsupported.rs
src-tauri/src/platform/windows/: capture.rs  cursor.rs  mod.rs  ocr.rs  pdf.rs
src-tauri/src/ui/: capture_scale.rs  config.rs  history.rs  i18n.rs  logging.rs  mod.rs  ocr_popup.rs  ocr_window.rs  overlay.rs  service_probe.rs  update.rs  web_popup.rs
(+127 files in other folders)
