[package]
name = "shizi"
version = "0.1.0"
edition = "2021"

[dependencies]
windows-reactor = { git = "https://github.com/microsoft/windows-rs" }
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
] }

[build-dependencies]
windows-reactor-setup = { git = "https://github.com/microsoft/windows-rs" }
