[package]
name = "shizi"
version = "0.7.1"
description = "A desktop translation app powered by LLM"
authors = ["XuDaojie"]
edition = "2021"
license = "GPL-3.0-only"

[lib]
name = "shizi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# WinUI 弹窗后端 = 路径 R（windows-reactor 真 WinUI 3）；Windows 默认启用；
# 可用 --no-default-features 关掉。GDI 路径 B 已移除（无 popup-winui-gdi）。
[features]
default = ["popup-winui"]
popup-winui = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
arboard = "3"
async-trait = "0.1"
enigo = "0.6"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
rusqlite = { version = "0.40", features = ["bundled"] }
tauri = { version = "2", features = ["image-png", "tray-icon"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["time", "macros"] }
tokio-util = "0.7"
log = "0.4"
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-mcp-bridge = "0.12"
zip = "2"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
sys-locale = "0.3"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "bmp"] }
base64 = "0.22"
semver = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Data_Pdf",
  "Foundation",
  "Foundation_Collections",
  "Globalization",
  "Graphics_Capture",
  "Graphics_DirectX",
  "Graphics_DirectX_Direct3D11",
  "Graphics_Imaging",
  "Media_Ocr",
  "Storage_Streams",
  "Win32_Graphics_Direct3D",
  "Win32_Graphics_Direct3D11",
  "Win32_Graphics_Dwm",
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Dxgi_Common",
  "Win32_Graphics_Gdi",
  "Win32_System_LibraryLoader",
  "Win32_System_Registry",
  "Win32_System_Threading",
  "Win32_System_WinRT",
  "Win32_System_WinRT_Direct3D11",
  "Win32_UI_HiDpi",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }
# 路径 R：windows-reactor（M0 候选 rev；绿后锁定，见 spike 文档）
windows-reactor = { git = "https://github.com/microsoft/windows-rs", rev = "884c9bbc1bd0a2315f00e0f04e34f6b1714653b9", package = "windows-reactor" }

[target.'cfg(windows)'.build-dependencies]
windows-reactor-setup = { git = "https://github.com/microsoft/windows-rs", rev = "884c9bbc1bd0a2315f00e0f04e34f6b1714653b9", package = "windows-reactor-setup" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
tempfile = "3"
filetime = "0.2"
